// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits markup should render <Hits /> 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <ol
    className="list"
  >
    <li
      className="item"
      dangerouslySetInnerHTML={
        {
          "__html": "item",
        }
      }
      onClick={[Function]}
    />
    <li
      className="item"
      dangerouslySetInnerHTML={
        {
          "__html": "item",
        }
      }
      onClick={[Function]}
    />
  </ol>
</div>
`;

exports[`Hits markup should render <Hits /> without highlight function 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <ol
    className="list"
  >
    <li
      className="item"
      dangerouslySetInnerHTML={
        {
          "__html": <mark class="ais-Highlight-highlighted">
  name 1
</mark>,
        }
      }
      onClick={[Function]}
    />
    <li
      className="item"
      dangerouslySetInnerHTML={
        {
          "__html": <mark class="ais-Highlight-highlighted">
  name 2
</mark>,
        }
      }
      onClick={[Function]}
    />
  </ol>
</div>
`;
